# ComfTrellis

./: .gitignore  README.md  TODO.txt  __init__.py  nodes.py  pyproject.toml  requirements.txt  setup.py  utils.py
assets/: High_quality.glb  LowQuality.glb
trellis/pipelines/: trellis_image_to_3d.py
trellis/utils/: postprocessing_utils.py  render_utils.py
wheels/diff_gaussian_rasterization/: diff_gaussian_rasterization-0.0.0-cp310-cp310-win_amd64.whl
wheels/diffoctreerast/: diffoctreerast-0.0.0-cp310-cp310-win_amd64.whl
wheels/utils3d/: utils3d-0.0.2-py3-none-any.whl
workflows/: High_Quality_MultiView.json  High_Quality_SingleView.json  Low_Quality_Multiview.json  Low_Quality_SingleView.json
